--- a/assets/sass/_main-files/_base/post-type/editor-not-gutenberg/sidebar/_categories.sass
+++ b/assets/sass/_main-files/_base/post-type/editor-not-gutenberg/sidebar/_categories.sass
@@ -31,7 +31,7 @@
 #category-all,
 #category-pop
   border: unset
-  padding: 1rem
+  padding: 1rem 1rem 0 1rem
 
 #categorychecklist,
 #categorychecklist-pop
